--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
                       <a href="https://wa.me/+919561228272" class="btn btn-outline-secondary container" target="_blank">HIRE ME !</a>
                       <br><br>
-                      <a href="img/RAJU BHASME(Full Stack Java Developer ).pdf" class="btn btn-outline-secondary container"DOWNLOAD target="_blank">DOWNLOAD RESUME</a> &nbsp;&nbsp;&nbsp;
+                      <a href="img/RAJU_BHASME_CV.pdf" class="btn btn-outline-secondary container"DOWNLOAD target="_blank">DOWNLOAD RESUME</a> &nbsp;&nbsp;&nbsp;
                       
                       
                     </div>  
